--- a/core/src/practicehtml/exchanger.html
+++ b/core/src/practicehtml/exchanger.html
@@ -22,7 +22,7 @@
             top: 0;
             right: 0;
             left: 0;
-            background-color: #ccd;
+            background-color: #1d24dd;
             width: 100%;
             text-align: center;
         }
@@ -34,7 +34,7 @@
             left: 0;
             height: 5em;
             width: 100%;
-            background-color: #ccd;
+            background-color: #1d24dd;
         }
 
         #content {
