--- a/todolist/src/main/webapp/index.html
+++ b/todolist/src/main/webapp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Todo List</title>
     <!-- Axios is a simple promise-based http client for JS -->
-    <script src="assets.js/axios.min.js"></script>
+    <script src="assets/js/axios.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
 </head>
