--- a/qalist/src/main/webapp/index.html
+++ b/qalist/src/main/webapp/index.html
@@ -8,14 +8,17 @@
 
 </head>
 <body>
+<header id="header"><h1>Ask your question</h1></header>
 
 <div>
     <input type="text" id="question" placeholder="type question..">
-    <input type="text" id="myanswer" placeholder="type question..">
-    <input type="button" id="button-search" value="Search">
+    <input type="text" id="myanswer" placeholder="type answer..">
+    <button id="search">Search</button>
+
 </div>
 
 <input type="text" id="answer">
 <script src="script.js"></script>
+
 </body>
 </html>
